# wordsum

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pythonpackage.yml
.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  re.data.json  re.meta.json  sys.data.json  sys.meta.json  textwrap.data.json  textwrap.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/importlib/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.8/os/: __init__.data.json  __init__.meta.json  path.data.json  path.meta.json
.mypy_cache/3.8/tests/: __init__.data.json  __init__.meta.json
.mypy_cache/3.8/wordcount/: __init__.data.json  (+3 more)
example_files/: test_notebook.ipynb
tests/: test_markdown.md  test_wordcount.py  test_wordsum.py
wordcount/: __init__.py  markdown.py  word_count.py
wordcount.egg-info/: PKG-INFO  SOURCES.txt
wordcount/file_types/: jupyter.py  markdown.py
wordcount/io/: read_files.py
wordcount/util/: file_locate.py
wordsum/: __init__.py  setup.py  word_sum.py
wordsum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wordsum/_file_types/: jupyter.py
wordsum/_io/: read_files.py
