[tool.poetry]
name = "wordsum"
version = "0.1.3"
description = "Counting words within a folder of files recursively."
readme = "README.md"
repository = "https://github.com/JackMcKew/wordsum"
authors = ["JackMcKew <jackmckew2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mypy = "^0.770"
nbformat = "^5.0.4"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/JackMcKew/wordsum/issues"